--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!--viewport setting for reseting zoom to original view-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--link to my cascading style sheets-->
-	<link rel="stylesheet" href="C:\Users\HP\Downloads\bootstrap-4.5.0-dist\bootstrap-4.5.0-dist\css\styles1.css">
+	<link rel="stylesheet" href="css\styles1.css">
 	<title>Module2-solution</title>
 </head>
 <body>
