--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<!--viewport setting for reseting zoom to original view-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--link to my cascading style sheets-->
+	<meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
 	<link rel="stylesheet" type=“text/css" href="styles.css">
 	<title>Module2-solution</title>
 </head>
