--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--link to my cascading style sheets-->
 	<meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<title>Module2-solution</title>
 </head>
 <body>
